--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss-radix": "^2.6.2",
     "zod": "^3.18.0"
   },
   "devDependencies": {
