--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@anatoliygatt/use-prefers-color-scheme": "^1.0.7",
     "@next/font": "^13.1.1",
+    "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-select": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.0.2",
     "next": "13.1.1",
